maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:27: error: ')' expected but '}' found.
	if (dansLeCadre(a+1,b)){ m = getIndication(a+1,b); if(aMurOuest(a+1,b){m = 9999}}
                                                                                        ^JediEscaper:28: error: ')' expected but '}' found.
	if (dansLeCadre(a,b+1)){ n = getIndication(a,b+1); if(aMurNord(a,b+1){n = 9999}}
                                                                                       ^JediEscaper:29: error: ')' expected but '}' found.
	if (dansLeCadre(a-1,b)){ o = getIndication(a-1,b); if(aMurOuest(a,b){o = 9999}}
                                                                                      ^JediEscaper:30: error: ')' expected but '}' found.
	if (dansLeCadre(a,b-1)){ p = getIndication(a,b-1); if(aMurNord(a,b){p = 9999}}
                                                                                     ^